# closedapi

./: README.md  pyproject.toml
closedapi/tasks/: __ini__.py  classify.py  completion.py  detect_language.py  detokenize.py  edit.py  embed.py  generate.py  tokenizer.py
