[tool.poetry]
name = "closedapi"
version = "0.1.0"
description = ""
authors = ["Chenghao Mou <mouchenghao@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
transformers = "^4.26.1"
torch = "^1.13.1"
diffusers = {extras = ["torch"], version = "^0.13.1"}
accelerate = "^0.16.0"

[tool.ruff]
line-length = 120

[tool.ruff.pydocstyle]
convention = "numpy"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.245"
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
